# demo-ndk

./: readme.txt  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/People/: People.cpp  People.h
app/src/main/cpp/base/: base.h
app/src/main/cpp/jni/: jni_dynamic_load.cpp
app/src/main/java/com/example/demondk2/: ICallback.java  IThreadCallback.java  JNIBasicType.java  JNIDynamicLoad.java  MainActivity.java  Person.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
